<resources>
    <string name="app_name">smile</string>
    <string name="title_text">smile</string>
    <string name="textWrite">WoW !! Welcome Buddy</string>
    <string name="get_started_text">Let Go!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Paascode</string>
    <string name="login_text">SignIn</string>
    <string name="or">Or</string>
    <string name="create_text" translatable="false">Create Account</string>
    <string name="username_hint">user name</string>
    <string name="thoughts">your thoughts</string>
    <string name="submit">Submit</string>
</resources>